--- a/app/Resources/translations/messages.de.xlf
+++ b/app/Resources/translations/messages.de.xlf
@@ -62,6 +62,18 @@
                 <source>login</source>
                 <target>Einloggen</target>
             </trans-unit>
+            <trans-unit id="shift_planning">
+                <source>shift_planning</source>
+                <target>Schicht Planung</target>
+            </trans-unit>
+            <trans-unit id="home_description">
+            <source>home_description</source>
+            <target>Einfaches Schichtplanungs Tool inspiriert durch</target>
+            </trans-unit>
+            <trans-unit id="create_shift_plan">
+                <source>create_shift_plan</source>
+                <target>Schichtplan erstellen</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
