--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -62,6 +62,18 @@
                 <source>login</source>
                 <target>login</target>
             </trans-unit>
+            <trans-unit id="shift_planning">
+                <source>shift_planning</source>
+                <target>Shift Planning</target>
+            </trans-unit>
+            <trans-unit id="home_description">
+                <source>home_description</source>
+                <target>This is a simple shift planning tool inspired by</target>
+            </trans-unit>
+            <trans-unit id="create_shift_plan">
+                <source>create_shift_plan</source>
+                <target>New shift plan</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
