--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -82,6 +82,44 @@
                 <source>password</source>
                 <target>Password</target>
             </trans-unit>
+            <trans-unit id="story">
+                <source>story</source>
+                <target>Story</target>
+            </trans-unit>
+            <trans-unit id="story_text">
+                <source>story_text</source>
+                <target>
+                    <![CDATA[
+                    Schicht-Plan.ch was built, for the culutural center <a href="http://akut-thun.ch">AKuT</a> in Thun.<br>
+                    They needed a shift planner which allowed to store templates, so external people who want to organise an event at AKuT
+                    are able to crate a shift plan themselves.
+                     <]]>
+                </target>
+            </trans-unit>
+            <trans-unit id="credits">
+                <source>credits</source>
+                <target>Credits</target>
+            </trans-unit>
+            <trans-unit id="credits_text">
+                <source>credits_text</source>
+                <target>
+                    <![CDATA[
+                    Built and hacked together by <a href="mailto:jan.friedli@gmx.ch?Subject=Schicht-Plan.ch" target="_top">Jan Friedli</a>. This tool was heavily inspired by <a href="https://schichtplan.immerda.ch">schichtplan.immerda.ch</a>.
+                    ]]>
+                </target>
+            </trans-unit>
+            <trans-unit id="license">
+                <source>license</source>
+                <target>License</target>
+            </trans-unit>
+            <trans-unit id="license_text">
+                <source>license_text</source>
+                <target>
+                    <![CDATA[
+                    This tool is licensed under GNU Affero General Public License (AGPL).<br>
+                    ]]>
+                </target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
