--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -152,6 +152,10 @@
                 <source>number_people</source>
                 <target>Nr. of required poeple</target>
             </trans-unit>
+            <trans-unit id="add_shift">
+                <source>add_shift</source>
+                <target>Add a shift</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
