--- a/app/Resources/translations/messages.de.xlf
+++ b/app/Resources/translations/messages.de.xlf
@@ -168,10 +168,6 @@
                 <source>new_by_template_title</source>
                 <target>Neuer Schichtplan anhand einer Vorlage</target>
             </trans-unit>
-            <trans-unit id="edit">
-                <source>edit</source>
-                <target>Editieren</target>
-            </trans-unit>
             <trans-unit id="save">
                 <source>save</source>
                 <target>Speichern</target>
@@ -179,6 +175,54 @@
             <trans-unit id="delete">
                 <source>delete</source>
                 <target>Löschen</target>
+            </trans-unit>
+            <trans-unit id="people_needed">
+                <source>people_needed</source>
+                <target>Einschreibeplätze</target>
+            </trans-unit>
+            <trans-unit id="show_details">
+                <source>show_details</source>
+                <target>Details anzeigen</target>
+            </trans-unit>
+            <trans-unit id="enroll">
+                <source>enroll</source>
+                <target>einschreiben</target>
+            </trans-unit>
+            <trans-unit id="edit">
+                <source>edit</source>
+                <target>Bearbeiten</target>
+            </trans-unit>
+            <trans-unit id="no_shifts_defined">
+                <source>no_shifts_defined</source>
+                <target>Keine Schichten definiert</target>
+            </trans-unit>
+            <trans-unit id="email">
+                <source>email</source>
+                <target>Email</target>
+            </trans-unit>
+            <trans-unit id="phone">
+                <source>phone</source>
+                <target>Telefon</target>
+            </trans-unit>
+            <trans-unit id="person">
+                <source>person</source>
+                <target>Person</target>
+            </trans-unit>
+            <trans-unit id="show_shift_details">
+                <source>show_shift_details</source>
+                <target>Zeige Schicht Details</target>
+            </trans-unit>
+            <trans-unit id="lost_password">
+                <source>lost_password</source>
+                <target>Passwort verloren?</target>
+            </trans-unit>
+            <trans-unit id="submit">
+                <source>submit</source>
+                <target>OK</target>
+            </trans-unit>
+            <trans-unit id="oh_snap">
+                <source>oh_snap</source>
+                <target>Oops!</target>
             </trans-unit>
         </body>
     </file>
