--- a/app/Resources/translations/messages.de.xlf
+++ b/app/Resources/translations/messages.de.xlf
@@ -248,6 +248,10 @@
                 <source>recover</source>
                 <target>Senden</target>
             </trans-unit>
+            <trans-unit id="register">
+                <source>register</source>
+                <target>Registieren</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
