--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -252,6 +252,10 @@
                 <source>register</source>
                 <target>Register</target>
             </trans-unit>
+            <trans-unit id="is_public">
+                <source>is_public</source>
+                <target>Make this template public?</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
