--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -264,6 +264,18 @@
                 <source>wrong_password</source>
                 <target>Wrong Password</target>
             </trans-unit>
+            <trans-unit id="username_or_email">
+                <source>username_or_email</source>
+                <target>Username or Email</target>
+            </trans-unit>
+            <trans-unit id="email_used">
+                <source>email_used</source>
+                <target>Email is in use. Login to create a new plan</target>
+            </trans-unit>
+            <trans-unit id="define_shifts">
+                <source>define_shifts</source>
+                <target>You need to define at leas one shift</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
