--- a/app/Resources/translations/messages.en.xlf
+++ b/app/Resources/translations/messages.en.xlf
@@ -296,6 +296,10 @@
                 <source>your_profile</source>
                 <target>Your Profile</target>
             </trans-unit>
+            <trans-unit id="edit_profile">
+                <source>edit_profile</source>
+                <target>Edit Profile</target>
+            </trans-unit>
         </body>
     </file>
 </xliff>
