send emails to the correct recipient

--- a/app/Resources/translations/messages.de.xlf
+++ b/app/Resources/translations/messages.de.xlf
@@ -250,7 +250,7 @@
             </trans-unit>
             <trans-unit id="register">
                 <source>register</source>
-                <target>Registieren</target>
+                <target>Registrieren</target>
             </trans-unit>
             <trans-unit id="is_public">
                 <source>is_public</source>
